# SupAgentic

./: .gitignore  AWESOME-LIST-SUBMISSIONS.md  BLOG.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Documentation.html  IMPORTANT.txt  INTEGRATIONS.md  README.md  YOUTUBE-SCRIPT.md  ai_threat_monitor.html  check_defenseclaw.ps1  check_phone.py  claude-plugins.md  clone_github_hot_repos.ps1  clone_missing_tools.ps1  clone_new_repos.ps1  clone_new_tools.ps1  compose_architecture.html  demo_pipeline.yaml  docker-compose.local-stack.yml  download_caido.py  download_templates.py  download_tools.py  health.ps1  hidden_architecture_brief.md  index.html  jaoji.html  kairos_daemon.py  mcp_server.py  memory_bus.py  muhd_nakudu_dossier.html  nuclei_dmcsa_web.txt  nuclei_results.txt  pdf_output.txt  persona.html  provision_tools.ps1  pyproject.toml  scan_axios_rat.ps1  (+28 more)
.cursor/: mcp.json
.gemini/: mcp.json
harness/: __init__.py  context_manager.py  permission_gate.py  subagent_orchestrator.py
memory/: MEMORY.md
meta_harness_proto/: cli.py  config.py  evaluator.py  failure_detector.py  harness.py  meta_harness_deep_dive.html  proposer.py  trace_logger.py  version_store.py
monitor_data/: metrics_20260325_144204.csv  metrics_20260325_145633.csv  metrics_20260325_150731.csv  metrics_20260410_182713.csv  network_20260325_144204.csv  network_20260325_145633.csv  network_20260325_150731.csv  network_20260325_152831.csv
prompts/: Claude prompt.txt  chain-of-thought.txt  code-review-expert.txt  data-analysis.txt  fullstack-app-generator.txt  resume-generator.txt  (+1 more)
(+286 files in other folders)
